LucNS: update payment